Hook up angular app module to index.html

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ dist/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
+lib/
 
 # Floobits
 .floo
