--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular-route": "^1.3.16",
+    "body-parser": "^1.13.0",
     "mongodb": "^2.0.33",
     "mongoose": "^4.0.5"
   }
