--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,6 @@
     "bootstrap": "~3.3.4",
     "angular": "~1.4.0",
     "angular-ui-router": "~0.2.15",
-    "angular-route": "~1.4.0"
+    "angular-route": "~1.4.0",
   }
 }
