--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,13 @@
     "angular": "~1.4.0",
     "angular-ui-router": "~0.2.15",
     "angular-route": "~1.4.0",
+    "ngFx": "~1.1.0",
+    "gsap": "~1.17.0",
+    "angular-animate": "~1.4.1"
+  },
+  "resolutions": {
+    "angular": ">= 1.0.8",
+    "angular-animate": "~1.4.1",
+    "gsap": "~1.17.0"
   }
 }
